Fix image visibility on deployment

--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ All colors MUST be HSL.
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url('/lovable-uploads/08276971-f3d6-48ef-af4b-9d930d4ced96.png');
+    background-image: url('./assets/noise.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -255,7 +255,7 @@ All colors MUST be HSL.
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url('/lovable-uploads/08276971-f3d6-48ef-af4b-9d930d4ced96.png');
+    background-image: url('./assets/noise.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
